# cookiecutter-pypackage

./: LICENSE  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst  installation.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: cli.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
